description of 3don3d remap and most of the planner flags

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,3 +1,8 @@
+@misc{fftw-mpi-data-distribution,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: MPI Data Distribution},
+  Url = {http://www.fftw.org/fftw3_doc/MPI-Data-Distribution.html#MPI-Data-Distribution}
+}
 
 @misc{fftw-2dmpi,
   Author = {Matteo Frigo and Steven~G. Johnson},
