--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -47,7 +47,7 @@ Most features of PFFT are inherited from FFTW or similarily implemented. These i
 \end{compactitem}
 Furthermore, we added some special features to support repeated tasks that often occur in practical application of parallel FFTs.
 \begin{compactitem}
-  \item PFFT includes a very flexible ghost cell exchange module. A detailed description of this module is given in Section~\ref{sec:ghost}.
+  \item PFFT includes a very flexible ghost cell exchange module. A detailed description of this module is given in Section~\ref{sec:gc}.
   \item PFFT accepts three-dimensional data decomposition even for three-dimen\-sional FFTs.
         However, the underlying parallel FFT framework is still based on two-dimensional decomposition. A more detailed description can be found
         in Section~\ref{sec:remap3dto2d}.
