--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -3,6 +3,7 @@
 % parskip: no indentation of paragraphs, german style
 %\usepackage{layout} % show layout boarders
 
+% \usepackage{parskip}
 \usepackage[english]{babel} % wordbreaks
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
