--- a/doc/shortcuts.tex
+++ b/doc/shortcuts.tex
@@ -166,6 +166,7 @@
 	moredelim=**[is][\color{red}]{(red@}{@*)},
         moredelim=**[is][\color{green}]{(gre@}{@*)},
         moredelim=**[is][\color{blue}]{(blu@}{@*)},
+%         belowskip=0pt,
 	}
   % 
   % \lstdefinestyle{txt}{language= C, 
