--- a/doc/interface.tex
+++ b/doc/interface.tex
@@ -72,7 +72,7 @@ pfft_plan pfft_plan_many_dft(
 \end{lstlisting}
 
 
-\section{Preliminary: Skip Serial Transformations}
+\section{Preliminary: Skip Serial Transformations}\label{sec:skip-trafo}
 The \code{_skipped} interface extends the \code{_many} interface by adding the possibility to skip some of the serial FFTs.
 \begin{lstlisting}
 pfft_plan pfft_plan_many_dft_skipped(
@@ -86,3 +86,10 @@ pfft_plan pfft_plan_many_dft_skipped(
 Hereby, \code{skip_trafos} is an \code{int} array of length \code{rnk_pm+1} (\code{rnk_pm} being the mesh dimension of the communicator \code{comm_cart}).
 For \code{t=0,...,rnk_pm} set \code{skip_trafos[t]=1} if the \code{t}-th serial transformation should be computed, otherwise set \code{skip_trafos[t]=0}.
 Note that the local transpositions are always performed, since they are a prerequisite for the global communication to work.
+At the moment it is only possible to skip the whole serial transform along the last \code{rnk_n-rnk_pm-1} dimensions.
+However, this behaviour can be realized by a call of a \code{(rnk_pm+1)}-dimensional PFFT with
+\begin{lstlisting}
+for(int t=rnk_pm+1; t<rnk_n; t++)
+  howmany *= n[t];
+\end{lstlisting}
+and manual computation of the desired serial transforms along the last \code{rnk_n-rnk_pm-1} dimensions.
